added match_topics to extract_data, added scoreboard module, boolean model

--- a/scripts/Algorithm_test.ipynb
+++ b/scripts/Algorithm_test.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "y = extract_data.get_specific_channel('UCCbfB3cQtkEAiKfdRQnfQvw')\n",
+    "y = extract_data.get_specific_channel('UC9CuvdOVfMPvKCiwdGKL3cQ')\n",
     "df = pd.read_csv('../YTCollab/data/YTGaming_base.csv').drop('Unnamed: 0', axis=1)"
    ]
   },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -669,22 +669,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Genna Bain\n",
-      "RajmanGaming HD\n",
-      "outsidexbox\n",
-      "Nixxiom\n",
-      "Generikb\n",
-      "TheKingNappy\n",
-      "NitroLukeDX\n",
-      "Poet Plays\n",
-      "AwesomeFaceProd\n",
-      "YouAlwaysWin\n"
+      "joshscorcher\n",
+      "Fed X Gaming\n",
+      "Cpt RageTastic\n",
+      "AnonymousAffection\n",
+      "Box Box\n",
+      "Daithi De Nogla\n",
+      "ZeroEmpires - Age of Empires 2\n",
+      "KPopp\n",
+      "Birdman\n",
+      "ExoticMoTioN\n"
      ]
     }
    ],
    "source": [
     "for i in np.argsort(sim_scores.T)[0][::-1][:10]:\n",
     "    print df['title'][i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "935                       joshscorcher\n",
+      "337                       Fed X Gaming\n",
+      "1280                    Cpt RageTastic\n",
+      "866                 AnonymousAffection\n",
+      "853                            Box Box\n",
+      "47                     Daithi De Nogla\n",
+      "986     ZeroEmpires - Age of Empires 2\n",
+      "457                              KPopp\n",
+      "585                            Birdman\n",
+      "1273                      ExoticMoTioN\n",
+      "Name: title, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df['title'][np.argsort(sim_scores.T)[0][::-1][:10]]"
    ]
   },
   {
