--- a/scripts/SFrame_testing.ipynb
+++ b/scripts/SFrame_testing.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -219,134 +219,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>country</th>\n",
        "      <th>subs</th>\n",
        "      <th>videos</th>\n",
        "      <th>views</th>\n",
-       "      <th>/m/02hrh1q</th>\n",
-       "      <th>/m/07vqnc</th>\n",
+       "      <th>topics</th>\n",
+       "      <th>/m/01tn_k</th>\n",
+       "      <th>/m/02cphr</th>\n",
        "      <th>/m/0gyv1hg</th>\n",
-       "      <th>/m/02n4hz</th>\n",
-       "      <th>/m/03d3jcv</th>\n",
-       "      <th>/m/025rw19</th>\n",
-       "      <th>/m/03dj64</th>\n",
+       "      <th>/m/07d5v</th>\n",
        "      <th>...</th>\n",
-       "      <th>/m/0248b</th>\n",
-       "      <th>/m/06l9b</th>\n",
-       "      <th>/m/026dz5f</th>\n",
-       "      <th>/m/07f_7h</th>\n",
-       "      <th>/m/01ct6</th>\n",
-       "      <th>/m/079m5l</th>\n",
-       "      <th>/m/0174k2</th>\n",
-       "      <th>/m/043mm3</th>\n",
-       "      <th>/m/05v954</th>\n",
-       "      <th>/m/02zw41</th>\n",
+       "      <th>/m/02qt1kl</th>\n",
+       "      <th>/m/01jshl</th>\n",
+       "      <th>/m/06zmzsz</th>\n",
+       "      <th>/m/0kz2x1z</th>\n",
+       "      <th>/m/070vn</th>\n",
+       "      <th>/m/010fcjp9</th>\n",
+       "      <th>/m/04058p</th>\n",
+       "      <th>/m/0bpsmq</th>\n",
+       "      <th>/m/0ltv</th>\n",
+       "      <th>/m/0134tlps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3181752</td>\n",
-       "      <td>1302</td>\n",
-       "      <td>505886761</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1508136</td>\n",
-       "      <td>883</td>\n",
-       "      <td>1635569899</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7947398</td>\n",
-       "      <td>2104</td>\n",
-       "      <td>1898281080</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1622414</td>\n",
-       "      <td>1827</td>\n",
-       "      <td>569954877</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1830016</td>\n",
-       "      <td>991</td>\n",
-       "      <td>419251873</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>GameGrumps</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>3193193</td>\n",
+       "      <td>3910</td>\n",
+       "      <td>2113827023</td>\n",
+       "      <td>[/m/0w6tdpj, /m/01mw1, /m/03bt1gh, /m/0bzvm2]</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -365,48 +269,60 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 7190 columns</p>\n",
+       "<p>1 rows × 532 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      subs  videos       views  /m/02hrh1q  /m/07vqnc  /m/0gyv1hg  /m/02n4hz  \\\n",
-       "0  3181752    1302   505886761           0          0           0          0   \n",
-       "1  1508136     883  1635569899           0          0           0          0   \n",
-       "2  7947398    2104  1898281080           0          0           0          0   \n",
-       "3  1622414    1827   569954877           0          0           0          0   \n",
-       "4  1830016     991   419251873           0          0           0          0   \n",
+       "        title country     subs  videos       views  \\\n",
+       "0  GameGrumps     n/a  3193193    3910  2113827023   \n",
        "\n",
-       "   /m/03d3jcv  /m/025rw19  /m/03dj64    ...      /m/0248b  /m/06l9b  \\\n",
-       "0           0           0          0    ...             0         0   \n",
-       "1           0           0          0    ...             0         0   \n",
-       "2           0           0          0    ...             0         0   \n",
-       "3           0           0          0    ...             0         1   \n",
-       "4           0           0          0    ...             0         0   \n",
+       "                                          topics  /m/01tn_k  /m/02cphr  \\\n",
+       "0  [/m/0w6tdpj, /m/01mw1, /m/03bt1gh, /m/0bzvm2]          0          0   \n",
        "\n",
-       "   /m/026dz5f  /m/07f_7h  /m/01ct6  /m/079m5l  /m/0174k2  /m/043mm3  \\\n",
-       "0           0          0         0          0          0          0   \n",
-       "1           0          0         0          0          0          0   \n",
-       "2           0          0         0          0          0          0   \n",
-       "3           0          0         0          0          0          0   \n",
-       "4           0          0         0          0          0          0   \n",
+       "   /m/0gyv1hg  /m/07d5v     ...       /m/02qt1kl  /m/01jshl  /m/06zmzsz  \\\n",
+       "0           0         0     ...                0          0           0   \n",
        "\n",
-       "   /m/05v954  /m/02zw41  \n",
-       "0          0          0  \n",
-       "1          0          0  \n",
-       "2          0          0  \n",
-       "3          0          0  \n",
-       "4          0          0  \n",
+       "   /m/0kz2x1z  /m/070vn  /m/010fcjp9  /m/04058p  /m/0bpsmq  /m/0ltv  \\\n",
+       "0           0         0            0          0          0        0   \n",
        "\n",
-       "[5 rows x 7190 columns]"
+       "   /m/0134tlps  \n",
+       "0            0  \n",
+       "\n",
+       "[1 rows x 532 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['a', 'c', 'd'],\n",
+       "       ['b', 'd', 'e'],\n",
+       "       ['c', 'e', 'f'],\n",
+       "       ['d', 'f', 'g']], \n",
+       "      dtype='|S1')"
+      ]
+     },
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "n = np.array([['a','b','c','d'],['b','c','d','e'],['c','d','e','f'],['d','e','f','g']])\n",
+    "np.delete(n, 1, 1)"
    ]
   },
   {
