fixed scoreboard bugs, boolean model

--- a/scripts/SFrame_testing.ipynb
+++ b/scripts/SFrame_testing.ipynb
@@ -327,6 +327,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 1, 6, 5, 4, 2, 0])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = np.array([[1,7,2,9,3,5,6]])\n",
+    "np.argsort(n)[0][::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
