--- a/scripts/Algorithm_test.ipynb
+++ b/scripts/Algorithm_test.ipynb
@@ -662,7 +662,8 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -714,6 +715,28 @@
    ],
    "source": [
     "print df['title'][np.argsort(sim_scores.T)[0][::-1][:10]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any(y)"
    ]
   },
   {
